--- a/testbulletin/templates/testbulletin/map.html
+++ b/testbulletin/templates/testbulletin/map.html
@@ -10,7 +10,10 @@
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 </head>
 <body>
+
   <div id="map"></div>
-  <script src="map.js"></script>
+  <script src="{% static 'map.js' %}" ></script>
+ 
+    
 </body>
 </html>
