--- a/testbulletin/templates/testbulletin/map.html
+++ b/testbulletin/templates/testbulletin/map.html
@@ -11,6 +11,8 @@
  
 </head>
 <body>
+  {{queryset}}
+  {{ queryset|json_script:"queryset-data" }}
 
   <div id="map"></div>
   <script src="{% static 'map.js' %}" ></script>
